# lecture4

./: README.md  lecture4.cabal  stack.yaml
app/: Main.hs  Picross.hs
src/: Lecture4.hs
